--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,43 @@
-# Avoid accidental upload of the Sketch and Figma design files
-#####################################################
-## Please do not remove lines 5 and 6 - thanks! 🙂 ##
-#####################################################
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Avoid accidental Sketch file upload 
+###############################################
+## Please do not remove line 5 - thanks! 🙂 ##
+###############################################
 *.sketch
+
+# Avoid accidental XD or Figma upload if you convert the design file
+#######################################################
+## Please do not remove lines 11 and 12 - thanks! 🙂 ##
+#######################################################
+*.xd
 *.fig
 
-# Avoid accidental XD upload if you convert the design file
-###############################################
-## Please do not remove line 12 - thanks! 🙂 ##
-###############################################
-*.xd
+# dependencies
+/node_modules
+.vite/
+.cache
+.parcel-cache
+/.pnp
+.pnp.js
 
-# Avoid your project being littered with annoying .DS_Store files!
+# testing
+/coverage
+
+# production
+/build
+/dist
+
+# misc
 .DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.txt
 .prettierignore
